--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic/storage": "2.0.1",
     "ajv": "^5.3.0",
     "cordova-plugin-file": "^5.0.0",
+    "cordova-plugin-ionic": "^4.1.3",
     "ionic-angular": "3.5.3",
     "ionicons": "3.0.0",
     "node-sass": "^4.7.2",
@@ -44,7 +45,12 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "cordova-plugin-ionic": {
+        "APP_ID": "8adcc905",
+        "CHANNEL_NAME": "Master",
+        "UPDATE_METHOD": "background"
+      }
     }
   }
 }
