--- a/package.json
+++ b/package.json
@@ -27,8 +27,15 @@
     "@ionic/cloud-angular": "^0.12.0",
     "@ionic/storage": "2.0.1",
     "ajv": "^5.3.0",
+    "cordova-android": "6.3.0",
+    "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-file": "^5.0.0",
+    "cordova-plugin-ionic": "~4.1.3",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-splashscreen": "~4.0.1",
+    "cordova-plugin-whitelist": "^1.3.1",
     "ionic-angular": "3.5.3",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "node-sass": "^4.7.2",
     "rxjs": "5.4.0",
@@ -49,7 +56,15 @@
         "APP_ID": "8adcc905",
         "CHANNEL_NAME": "Master",
         "UPDATE_METHOD": "auto"
-      }
-    }
+      },
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
